# carpark-simulator

./: CMakeLists.txt  Makefile  README.md  config.h  parking.c  parking.h  plates-hash-table.c  plates-hash-table.h  test.c
docs/: Thread flow diagrams.drawio
docs/Carpark Simulator LaTeX -  johnnymadigan/: main.tex
docs/Carpark Simulator LaTeX - johnnymadigan/: main.tex
src-fire-alarm-system/: Makefile  fire-alarm.c  fire-common.c  fire-common.h  fire-evac.c  fire-evac.h  fire-gate.c  fire-gate.h  monitor-temp.c  monitor-temp.h
src-manager/: Makefile  display-status.c  display-status.h  man-common.h  manage-entrance.c  manage-entrance.h  manage-exit.c  manage-exit.h  manage-gate.c  manage-gate.h  manager.c  parking-types.h  plates-hash-table.c  plates-hash-table.h
src-simulator/: Makefile  car-lifecycle.c  car-lifecycle.h  handle-entrance.c  handle-entrance.h  parking.c  parking.h  queue.c  queue.h  sim-common.h  simulate-entrance.c  simulate-entrance.h  simulate-exit.c  simulate-exit.h  simulate-temp.c  simulate-temp.h  simulator.c  sleep.c  sleep.h  spawn-cars.c  spawn-cars.h
